force-app/main/default/objects/EmailCampaign__c/EmailCampaign__c.object-meta.xml
<CustomObject>
    <label>Email Campaign</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Campaigns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>