force-app/main/default/objects/EmailCampaign__c/fields/BounceCount__c.field-meta.xml
<CustomField>
    <fullName>BounceCount__c</fullName>
    <label>Bounce Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>