force-app/main/default/objects/EmailCampaign__c/fields/BounceRate__c.field-meta.xml
<CustomField>
    <fullName>BounceRate__c</fullName>
    <label>Bounce Rate (Editable)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>