force-app/main/default/objects/EmailCampaign__c/fields/BrowserFilter__c.field-meta.xml
<CustomField>
    <fullName>BrowserFilter__c</fullName>
    <label>Audience</label>
    <length>80</length>
    <type>Text</type>
</CustomField>