force-app/main/default/objects/EmailCampaign__c/fields/ClickRate__c.field-meta.xml
<CustomField>
    <fullName>ClickRate__c</fullName>
    <label>Click Rate (Editable)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>