force-app/main/default/objects/EmailCampaign__c/fields/ContentFormat__c.field-meta.xml
<CustomField>
    <fullName>ContentFormat__c</fullName>
    <label>ContentFormat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mjml</fullName>
            </value>
            <value>
                <fullName>html</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>