force-app/main/default/objects/EmailCampaign__c/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>From Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>