force-app/main/default/objects/EmailCampaign__c/fields/IsSentOnBehalf__c.field-meta.xml
<CustomField>
    <fullName>IsSentOnBehalf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sent On Behalf</label>
    <type>Checkbox</type>
</CustomField>