force-app/main/default/objects/EmailCampaign__c/fields/ListViewBounceRate__c.field-meta.xml
<CustomField>
    <fullName>ListViewBounceRate__c</fullName>
    <formula>BounceRate__c</formula>
    <label>Bounce Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>