force-app/main/default/objects/EmailCampaign__c/fields/ListViewClickRate__c.field-meta.xml
<CustomField>
    <fullName>ListViewClickRate__c</fullName>
    <formula>ClickRate__c</formula>
    <label>Click Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>