force-app/main/default/objects/EmailCampaign__c/fields/ListViewNumberOfRecepients__c.field-meta.xml
<CustomField>
    <fullName>ListViewNumberOfRecepients__c</fullName>
    <formula>NumberOfRecipients__c</formula>
    <label>Number of Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>