force-app/main/default/objects/EmailCampaign__c/fields/ListViewOpenRate__c.field-meta.xml
<CustomField>
    <fullName>ListViewOpenRate__c</fullName>
    <formula>OpenRate__c</formula>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>