force-app/main/default/objects/EmailCampaign__c/fields/ListViewStatus__c.field-meta.xml
<CustomField>
    <fullName>ListViewStatus__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>