force-app/main/default/objects/EmailCampaign__c/fields/ListViewUnsubscribeRate__c.field-meta.xml
<CustomField>
    <fullName>ListViewUnsubscribeRate__c</fullName>
    <formula>UnsubscribeRate__c</formula>
    <label>Unsubscribe Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>