force-app/main/default/objects/EmailCampaign__c/fields/NumberOfRecipients__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRecipients__c</fullName>
    <label>Number Of Recipients (Editable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>