force-app/main/default/objects/EmailCampaign__c/fields/OpenCount__c.field-meta.xml
<CustomField>
    <fullName>OpenCount__c</fullName>
    <label>Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>