force-app/main/default/objects/EmailCampaign__c/fields/OpenRate__c.field-meta.xml
<CustomField>
    <fullName>OpenRate__c</fullName>
    <label>Open Rate (Editable)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>