force-app/main/default/objects/EmailCampaign__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>Scheduled Date</label>
    <type>DateTime</type>
</CustomField>