force-app/main/default/objects/EmailCampaign__c/fields/SendCopyTo__c.field-meta.xml
<CustomField>
    <fullName>SendCopyTo__c</fullName>
    <label>Send Copy To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>