force-app/main/default/objects/EmailCampaign__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <label>Status (Editable)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>scheduled</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>