force-app/main/default/objects/EmailCampaign__c/fields/SystemExternalId__c.field-meta.xml
<CustomField>
    <fullName>SystemExternalId__c</fullName>
    <externalId>true</externalId>
    <label>System External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>