force-app/main/default/objects/EmailCampaign__c/fields/UnsubscribeCount__c.field-meta.xml
<CustomField>
    <fullName>UnsubscribeCount__c</fullName>
    <label>Unsubscribe Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>