force-app/main/default/objects/EmailCampaign__c/fields/UnsubscribeRate__c.field-meta.xml
<CustomField>
    <fullName>UnsubscribeRate__c</fullName>
    <label>Unsubscribe Rate (Editable)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>