force-app/main/default/objects/EmailCampaign__c/listViews/All_Email_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Email_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>ListViewNumberOfRecepients__c</columns>
    <columns>ListViewStatus__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>SendDate__c</columns>
    <columns>ListViewOpenRate__c</columns>
    <columns>ListViewClickRate__c</columns>
    <columns>ListViewBounceRate__c</columns>
    <columns>ListViewUnsubscribeRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Email Campaigns</label>
</ListView>