force-app/main/default/objects/EmailCampaign__c/listViews/My_Email_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Email_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>ListViewNumberOfRecepients__c</columns>
    <columns>ListViewStatus__c</columns>
    <columns>ScheduledDate__c</columns>
    <columns>SendDate__c</columns>
    <columns>ListViewOpenRate__c</columns>
    <columns>ListViewClickRate__c</columns>
    <columns>ListViewBounceRate__c</columns>
    <columns>ListViewUnsubscribeRate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Email Campaigns</label>
</ListView>